[package]
name = "ryleigh_banff"
version = "0.1.0"
edition = "2021"
description = "A generative Rocky Mountain birthday keepsake for Ryleigh — rendered in Rust, compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
